src/objects/Member__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_in_List__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether this Member should be included in the final list, after processing the inclusion/exclusion logic.</inlineHelpText>
        <label>Include in List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Names__c</fullName>
        <label>Source Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sources__c</fullName>
        <label>Sources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Member</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>